--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,9 @@
 trigger:
 - '*'
 
-pool:
-  vmImage: 'ubuntu-20.04'
-  demands:
-  - npm
+pool: 
+  name: Default
+  demands: npm
 
 variables:
   buildConfiguration: 'Release'
